# napi

./: .gitignore  README.md  napi.py  pyproject.toml  setup.py
examples/: query.json
tests/: test_napi.py
